# curryer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  NOTICE  README.md  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
curryer/: __init__.py  meta.py  tle.py  utils.py
curryer/compute/: __init__.py  abstract.py  constants.py  elevation.py  ephemeris.py  geometry.py  geometry_fields.py  pointing.py  spatial.py
curryer/correction/: __init__.py  config.py  correction.py  correction_config.py  data_structures.py  dataio.py  error_stats.py  geolocation_error_stats.py  grid_types.py  image_io.py  image_match.py  io.py  io_config.py  kernel_ops.py  monte_carlo.py  monte_carlo_image_match_adapter.py  pairing.py  parameters.py  pipeline.py  psf.py  regrid.py  results.py  results_io.py  run_monte_carlo.py  search.py  verification.py
curryer/kernels/: __init__.py  attitude.py  classes.py  create.py  ephemeris.py  path_utils.py  writer.py
curryer/kernels/templates/: kernel_macros.jinja2  mkspk_setup_template.txt  msopck_setup_template.txt
curryer/spicetime/: __init__.py  constants.py  convert.py  leapsecond.py  native.py  utils.py
curryer/spicierpy/: __init__.py  ext.py  obj.py  vectorized.py
data/clarreo/: cprs_az_v01.attitude.ck.json  cprs_base_v01.fixed_offset.spk.json  cprs_el_v01.attitude.ck.json  cprs_hysics_v01.fixed_offset.spk.json  cprs_pede_v01.fixed_offset.spk.json  cprs_v00.frames.fk.tf  cprs_v01.frames.fk.tf  cprs_v01.instruments.ik.ti  cprs_v01.kernels.tm.json  cprs_yoke_v01.fixed_offset.spk.json  iss_sc_v01.attitude.ck.json  iss_sc_v01.ephemeris.spk.json  iss_sc_v01.tle.spk.json  iss_v01.fakeclock.sclk.tsc
data/ctim/: ctim_tim_v01.fixed_offset.spk.json  ctim_v01.attitude_apid1.ck.json  ctim_v01.frames.fk.tf  ctim_v01.instruments.ik.ti  ctim_v01.kernels.tm.json  ctim_v01.tle.spk.json
data/generic/: de430_earth_sun_moon_20000101_20350101.bsp  de430_earth_sun_moon_20150101_20300101.bsp  earth_000101_221016_220723.bpc  earth_720101_070426.bpc  earth_assoc_itrf93.tf  earth_fixed.tf  geophysical.ker  moon_080317.tf  moon_assoc_pa.tf  naif0012.tls  pck00010.tpc
data/gmted/: 10N000E_20101117_gmted_mea150.tif  10N030E_20101117_gmted_mea150.tif  10N030W_20101117_gmted_mea150.tif  10N060E_20101117_gmted_mea150.tif  10N060W_20101117_gmted_mea150.tif  10N090E_20101117_gmted_mea150.tif  10N090W_20101117_gmted_mea150.tif  10N120E_20101117_gmted_mea150.tif  10N120W_20101117_gmted_mea150.tif  10N150E_20101117_gmted_mea150.tif  10N150W_20101117_gmted_mea150.tif  10N180W_20101117_gmted_mea150.tif  10S000E_20101117_gmted_mea150.tif  10S030E_20101117_gmted_mea150.tif  10S030W_20101117_gmted_mea150.tif  10S060E_20101117_gmted_mea150.tif  10S060W_20101117_gmted_mea150.tif  10S090E_20101117_gmted_mea150.tif  10S090W_20101117_gmted_mea150.tif  10S120E_20101117_gmted_mea150.tif  10S120W_20101117_gmted_mea150.tif  10S150E_20101117_gmted_mea150.tif  10S150W_20101117_gmted_mea150.tif  10S180W_20101117_gmted_mea150.tif  30N000E_20101117_gmted_mea150.tif  30N030E_20101117_gmted_mea150.tif  30N030W_20101117_gmted_mea150.tif  30N060E_20101117_gmted_mea150.tif  30N060W_20101117_gmted_mea150.tif  30N090E_20101117_gmted_mea150.tif  30N090W_20101117_gmted_mea150.tif  30N120E_20101117_gmted_mea150.tif  30N120W_20101117_gmted_mea150.tif  30N150E_20101117_gmted_mea150.tif  30N150W_20101117_gmted_mea150.tif  30N180W_20101117_gmted_mea150.tif  30S000E_20101117_gmted_mea150.tif  30S030E_20101117_gmted_mea150.tif  30S030W_20101117_gmted_mea150.tif  30S060E_20101117_gmted_mea150.tif  (+68 more)
data/tsis1/: iss_expa35_v01.fixed_offset.spk.json  iss_sc_v01.attitude.ck.json  iss_sc_v01.ephemeris.spk.json  iss_sc_v01.tle.spk.json  tsis_azel_v01.attitude.ck.json  tsis_azel_v01.fixed_offset.spk.json  tsis_tads_v01.fixed_offset.spk.json  tsis_tim_glint_v01.fixed_offset.spk.json  tsis_tim_v01.fixed_offset.spk.json  tsis_v01.frames.fk.tf  tsis_v01.kernels.tm.json
docs/: Makefile  spice_path_handling.md
docs/source/: acknowledgement.md  changelog.md  conf.py  contents.rst  correction_user_guide.md  developers.md  gcp_regridding.md  index.rst  repo_data.md  repo_management.md  users.md
error_stats/: csds_error_stats.py  geolocation_error_stats.py  test_geolocation_error_stats.py
examples/correction/: README.md  clarreo_config.json  clarreo_config.py  example_config.json  example_run_correction.py  example_verification.py  regrid_gcp_chips.py
scripts/: clarreo_preprocess.py  example_regrid_to_netcdf.py  example_verification_minimal.py  example_weekly_verification.py
tests/: conftest.py  sit4_l1a_geolocation.py  test_clarreo_eng_scenarios.py  test_integration_ctim.py  test_integration_tsis1.py  test_monte_carlo.py  test_tle.py
tests/data/clarreo/: GeolocationTestCase1.xlsx  cprs_az_v01.attitude.ck.testcase1.bc  cprs_az_v01.attitude.ck.testcase1.json  cprs_az_v01.attitude.ck.testcase1.nc  cprs_v01.frames.fk.tf  (+19 more)
tests/test_compute/: test_compute_elevation.py  test_compute_geometry.py  test_compute_pointing.py  test_compute_spatial.py
tests/test_correction/: _synthetic_helpers.py  clarreo_config.py  clarreo_data_loaders.py  conftest.py  run_monte_carlo.py  test_config.py  test_correction.py  test_dataio.py  test_error_stats.py  test_geolocation_error_stats.py  test_image_io.py  test_image_match.py  test_io.py  test_kernel_ops.py  test_monte_carlo.py  test_monte_carlo_image_match_adapter.py  test_monte_carlo_pipeline.py  test_pairing.py  test_parameters.py  test_pipeline.py  test_regrid.py  test_results.py  test_results_io.py  test_verification.py  test_weekly_verification.py
tests/test_kernels/: test_kernels_attitude.py  test_kernels_ephemeris_state.py  test_kernels_ephemeris_tle.py  test_kernels_writer.py  test_short_paths.py
tests/test_spicetime/: test_spicetime_convert.py  test_spicetime_init.py  test_spicetime_leapsecond.py  test_spicetime_native.py  test_spicetime_utils.py
tests/test_spicierpy/: test_spicierpy_ext.py  test_spicierpy_init.py  test_spicierpy_obj.py  test_spicierpy_vectorized.py
(+101 files in other folders)
