[project]
name = "lasp-curryer"
version = "0.1.3"
description = "LASP SPICE extentions and geospatial data product generation tools."
authors = [
    {name = "Brandon Stone", email = "brandon.h.stone@colorado.edu"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
license = { text = "MIT"}
keywords = ["LASP", "SDP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "scipy>=1.9",
    "pandas>=1.5",
    "xarray>=2022.11",
    "netcdf4>=1.6",
    "pyhdf>=0.11",
    "rioxarray>=0.15",
    "rasterio==1.3.9",
    "pyproj>=3.6",
    "pyshp>=2.3",
    "requests>=2.28",
    "jinja2>=3",
    "spiceypy>=6",
    "openpyxl>=3",
    "numpy (>=1.23,<2.0)"
]

[project.optional-dependencies]
# Since these are only for testing, we do not care what version they are
test = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "ruff"
]

[tool.poetry]
packages = [
    { include = "curryer" }
]

[project.urls]
repository = "https://github.com/lasp/curryer"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"
ruff = "*"
ipython = "*"

#[tool.poetry.scripts]
#curryer = 'curryer.__main__:main'

[build-system]
requires = ["poetry-core>=2.0.1"]  # 2.0.0 has bugs
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
include = ["curryer/**/*.py"]
exclude = [
    "docs",
    "examples",
    "tests",
    "data"
]

[tool.ruff.lint]
select = [
    "E",  # Pycodestyle errors
#    "F",  # Pyflakes syntax checking
#    "I",  # isort import sorting
#    "S",  # Bandit security and vulnerability checking
    "W",  # Pycodestyle warnings
#    "PT",  # Pytest test checking
#    "UP"  # Syntax updater for Python version changes
]
